--- a/main.css
+++ b/main.css
@@ -1,14 +1,14 @@
 header
 {
-  padding: 3px; 
   width:100% ;
-   height:100%;
+  height:100%;
   display: flex;
-   flex-direction: row;
-   justify-content: space-between;
-   align-items:space-between;
-   font-size: large;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items:space-between;
+  font-size: large;
 }
+a{text-decoration: none;}
 .right_header
 {
     padding-right: 0.5cm;
@@ -22,58 +22,45 @@ font-size: larger;
 display: inline;
 font-weight:bold;
 }
-/* styling search bar */
-.search input[type=text]{
-width: 100%;
-height: 50px;
-border-radius: 25px;
-border: 2px solid #6504b5;
+b{
+  font-family: cursive;
+  color: #6504b5;
+  font-size: large;
+  display: inline;
+  font-weight:bold;
+  top:20px;
+  position: relative;
+
 }
-.search{
-    background-color:#6504b5;
-    background-image: url("https://www.petfinder.com/sites/default/files/styles/hero_image_667_235/public/images/content/667%20hero_0.jpg?itok=mwPI7hr1");
-    background-size: 100%;
-    border: none;
-    background-repeat: no-repeat;
-    padding: 7%;
-}
-.butt {
-    background-image: url("search-icon.png");
-    background-size: cover;
-    height:50px;
-    width:50px;   
- }
-.btn {
-    border: none;
-    display: inline-block;
-    padding: 12px 16px;
-    position: absolute;
-    right: 30px;
-    cursor: pointer;
-  }
   .btn .heart
   {
     display: inline;
-    position: absolute;
-    left: 110px;
   }
     .heart
 {
+  background-color: transparent;
     display: inline;
     border: none;
     content: 300px;
     padding: 0px 22px;
     top:27px;
+    position: absolute;
     cursor: pointer;
 }
+a{
+  text-decoration: none;
+  cursor: pointer;
+}
 .dropbtn {
-    background-image: url("menu-bar.png");
+    background-image: url("menu-icon.png");
     height: 27px;
-    width: 27px;
+    width: 40px;
+    background-repeat: no-repeat;
     border: none;
+    position: relative;
+    top: 4px;
   }
-  
-  
+
 .dropdown {
     position: relative;
     display: inline-block;
@@ -105,7 +92,6 @@ border: 2px solid #6504b5;
   
   .dropdown:hover .dropdown-content {display: block;}
   
-  .dropdown:hover .dropbtn {background-color: #3e8e41;}
   .site-footer {
     background-color: #6504b5;
       text-align: center;
