--- a/SignIn.css
+++ b/SignIn.css
@@ -17,17 +17,16 @@
     position: relative;
     width:100%;
     height: 100%;
+    padding-bottom: 20px;
 }
-label{
+label {
     color: #533292;
-    font-weight: bolder;
     font-size: 2.3em;
     justify-content: center;
     display: flex;
     margin: 60px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: .5s ease-in-out;
+    font-weight: bolder;
+    font-family: system-ui;
 }
 input{
     width: 60%;
@@ -41,7 +40,7 @@ input{
     outline: none;
     border-radius: 5px;
 }
-.buttonn{
+.button_submit{
     width: 60%;
     height: 40px;
     margin: 10px auto;
