--- a/main_new.css
+++ b/main_new.css
@@ -27,8 +27,6 @@ a{
     width: 40px;
     background-repeat: no-repeat;
     border: none;
-    position: relative;
-    top: 4px;
   }
 
 .dropdown {
@@ -91,3 +89,11 @@ a{
   .footer-nav p {
       text-align: center;
   }
+
+
+.link {
+    font-size: x-large;
+    color: #6504b5;
+    font-family: system-ui;
+    font-weight: bolder;
+}
