--- a/trial.css
+++ b/trial.css
@@ -1,61 +1,58 @@
-header
-{
-  display: flex;
-  justify-content: space-between;
- }
-.left_header_adopt
-{
-text-decoration: none;
+header{
+    padding: 30px;
 }
-.heart
-{
-  background-color: transparent;
-  display: inline;
-  border: none;
-  right: 70px;
-  top: 42px;
-  position: absolute;
-  cursor: pointer;
+.left_header_adopt {
+    text-decoration: none;
+    float: left;
+    position: relative;
+    bottom: 35px;
+}
+.uploadd {
+    float: right;
+    position: relative;
+    bottom: 50px;
+    right: 11px;
+}
+.heart {
+    background-color: transparent;
+    float: right;
+    position: relative;
+    cursor: pointer;
+    bottom: 21px;
+    border: none;
+    text-decoration: none;
+    right: 12px;
 }
 a{
   text-decoration: none;
   cursor: pointer;
 }
 .dropbtn {
-    background-image: url("menu-icon.png");
+    background-image: url(menu-icon.png);
     height: 40px;
     width: 40px;
     background-repeat: no-repeat;
     border: none;
+    float: right;
+    bottom: 15px;
     position: relative;
-    top: 4px;
-  }
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-    top:35px;
-    left: 350px;
-  }
-  .dropdown-content {
+}
+.dropdown-content {
     display: none;
     position: absolute;
     background-color: #f1f1f1;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    margin:0px ;
-    right: 0px;
-    top: 40px;
+    min-height: 120px;
+    box-shadow: 0px 8px 16px 0px rgb(0 0 0 / 20%);
+    margin: 0px;
     z-index: 1;
-  }
+    right: 1px;
+    line-height: 50px;
+} 
   
   .dropdown-content a {
     color: black;
-    padding: 12px 16px;
-    display: flex;
-    flex: column;
-    justify-items: end;
-    
+    padding: 12px 16px;    
   }
   
   .dropdown-content a:hover {background-color: #ddd;}
@@ -91,3 +88,11 @@ a{
   .footer-nav p {
       text-align: center;
   }
+
+
+.link {
+    font-size: x-large;
+    color: #6504b5;
+    font-family: system-ui;
+    font-weight: bolder;
+}
