--- a/SignIn.css
+++ b/SignIn.css
@@ -21,6 +21,7 @@
 }
 label {
     color: #533292;
+    /* font-weight: bolder; */
     font-size: 2.3em;
     justify-content: center;
     display: flex;
@@ -28,19 +29,20 @@ label {
     font-weight: bolder;
     font-family: system-ui;
 }
-input{
+input {
     width: 60%;
-    height: 20px;
+    height: 23px;
     background: #e0dede;
     justify-content: center;
     display: flex;
-    margin: 20px auto;
-    padding: 10px;
+    margin: 20px;
+    padding: 15px;
     border: none;
     outline: none;
     border-radius: 5px;
 }
 .button_submit{
+    font-family: system-ui;
     width: 60%;
     height: 40px;
     margin: 10px auto;
@@ -57,6 +59,6 @@ input{
     transition: .2s ease-in;
     cursor: pointer;
 }
-.buttonn:hover{
+.button_submit:hover{
     background: #6d44b8;
 }
