--- a/form.css
+++ b/form.css
@@ -1,6 +1,17 @@
-img{
-    border-radius: 50px;
-}.form-style-7{
+.pic {
+    position: relative;
+    left: 27px;
+    border-radius: 150px;
+    border: white;
+    padding: 6px;
+    border-radius: 150px;
+    color: white;
+    background-color: white;
+    margin: 2px;
+    box-shadow: 0px 0px 0px 9px #6504b5;
+}
+
+.form-style-7{
 	max-width:400px;
 	margin:50px auto;
 	border-radius:2px;
@@ -36,7 +47,42 @@ img{
 	font-size: 14px;
 	overflow: hidden;
 	font-family: Arial, Helvetica, sans-serif;
-}.form-style-7 input[type="url"]:focus,
+}
+input{
+    border-top-style: hidden;
+    border-right-style: hidden;
+    border-left-style: hidden;   
+    outline: none;
+    border-bottom-style: groove;
+}
+.form-style-7 input[type="text"],
+.form-style-7 input[type="email"],
+.form-style-7 input[type="number"],
+.form-style-7 textarea,
+.form-style-7 select 
+{
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	width: 100%;
+	display: block;
+	outline: none;
+	border: none;
+    text-decoration: none;
+	height: 25px;
+	line-height: 25px;
+	font-size: 16px;
+	padding: 0;
+	font-family: Georgia, "Times New Roman", Times, serif;
+}
+.form-style-7 input[type="text"]:focus,
+.form-style-7 input[type="date"]:focus,
+.form-style-7 input[type="datetime"]:focus,
+.form-style-7 input[type="email"]:focus,
+.form-style-7 input[type="number"]:focus,
+.form-style-7 input[type="search"]:focus,
+.form-style-7 input[type="time"]:focus,
+.form-style-7 input[type="url"]:focus,
 .form-style-7 input[type="password"]:focus,
 .form-style-7 textarea:focus,
 .form-style-7 select:focus 
@@ -52,6 +98,10 @@ img{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 11px;
 }
+.form-style-7 textarea{
+	resize:none;
+}
+.form-style-7 input[type="submit"],
 .form-style-7 input[type="button"]{
 	background: #2471FF;
 	border: none;
@@ -59,4 +109,9 @@ img{
 	border-bottom: 3px solid #5994FF;
 	border-radius: 3px;
 	color: #D2E2FF;
+}
+.form-style-7 input[type="submit"]:hover,
+.form-style-7 input[type="button"]:hover{
+	background: #6B9FFF;
+	color:#fff;
 }
