--- a/trial.css
+++ b/trial.css
@@ -31,6 +31,7 @@ a{
     background-image: url(menu-icon.png);
     height: 40px;
     width: 40px;
+    background-color: transparent;
     background-repeat: no-repeat;
     border: none;
     float: right;
