--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@
      .buttons.dog
      {
         cursor: pointer;
-        background-image: url("images/dogg.png");
+        background-image: url("images/dog.png");
         background-size: cover;
      }
      .buttons.cat
