--- a/trial.css
+++ b/trial.css
@@ -1,5 +1,5 @@
 header{
-    padding: 3%;
+    padding: 2.5%;
 }
 .left_header_adopt {
     text-decoration: none;
@@ -48,12 +48,15 @@ a{
     margin: 0px;
     z-index: 1;
     right: 1px;
+    top:90px;
+    font-weight:100px;
     line-height: 50px;
 } 
   
   .dropdown-content a {
     color: black;
-    padding: 12px 16px;    
+    padding: 12px 16px; 
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;   
   }
   
   .dropdown-content a:hover {background-color: #ddd;}
