--- a/cats.css
+++ b/cats.css
@@ -1,24 +1,19 @@
+.window_fit{
+    background-image: url(bgg.jpg);
+    width: 100%;
+    height: 100%;
+}
+.inner_button .delete {
+    border-radius: 3px;
+    border: 2px solid black;
+    font-size: 15px;
+}
 .wrapper {
     display: grid;
     grid-template-columns: repeat(auto-fit, 42%);
     grid-gap: 30px;
     margin-right: 42px;
 }
-    
-  /*  .inner_button{
-        display: grid;
-        grid-row-start: auto;
-        margin: auto;
-        height: 2em;
-        width: 5em;
-        justify-content: center;
-        align-items: center;
-        border-radius: 6px;
-        position: relative;
-        top:5px;
-        bottom: 20px;
-    }
-    .inner_button:hover{background-color: green;}*/
     .inner_button {
         display: flex;
         flex-direction: row;
@@ -29,7 +24,7 @@
         justify-content: center;
         position: relative;
         top: 18px;
-        left: 9%;
+        left: 17%;
     }
     .inner_button1:hover{background-color: red;}
     .button {
