--- a/trial.css
+++ b/trial.css
@@ -66,7 +66,9 @@ a{
   .site-footer {
     background-color: #6504b5;
       text-align: center;
-      margin: 10px 0;
+      position: relative;
+    margin-top: 32px;
+    height: 82px;
   }
   
   /*Social Media Icons*/
